# stargate-x

./: .gitignore  Pipfile  README.md  analyze_graph.py  build_graphs.py  generate_all_graphs.py  generate_data.py  mypy.ini  pyproject.toml  setup.py
queries/: edges.cypher  pathways.cypher
reactome_graph/: __init__.py  builder.py  centrality.py  constants.py  functions.py  graph.py  graph_builder.py  neo4j.py  species.py
reactome_graph/analysis/: __init__.py  base.py  centrality.py  connection.py  connectivity.py
reactome_graph/data/: Arenicola marina.pickle  Caenorhabditis elegans.pickle  Cavia porcellus.pickle  Cercopithecus aethiops.pickle  Chlorocebus sabaeus.pickle  Cricetulus griseus.pickle  Crithidia fasciculata.pickle  Dictyostelium discoideum.pickle  Escherichia coli.pickle  Felis catus.pickle  Homarus americanus.pickle  Human cytomegalovirus.pickle  Listeria monocytogenes serotype 1-2a.pickle  Macaca mulatta.pickle  Meleagris gallopavo.pickle  Mus musculus.pickle  Mycobacterium tuberculosis.pickle  Oryctolagus cuniculus.pickle  Ovis aries.pickle  Penicillium chrysogenum.pickle  Plasmodium falciparum.pickle  Rattus norvegicus.pickle  Saccharomyces cerevisiae.pickle  Salmonella typhimurium.pickle  Schizosaccharomyces pombe.pickle  Sus scrofa.pickle  Triticum aestivum.pickle  Vigna radiata var. radiata.pickle  Xenopus laevis.pickle  Xenopus tropicalis.pickle
reactome_graph/queries/: compartments.cypher  edges.cypher  pathways.cypher
reactome_graph/utils/: builder.py  neo4j.py  subgraphs.py
scripts/: main.sh
stargate_x/: constants.py  data.py  graph.py
(+20 files in other folders)
